[gd_scene load_steps=5 format=2]

[ext_resource path="res://menu/credits/Credits.gd" type="Script" id=1]
[ext_resource path="res://ui/default-theme.tres" type="Theme" id=2]
[ext_resource path="res://menu/btnHome.png" type="Texture" id=3]
[ext_resource path="res://menu/credits/credits.tres" type="Theme" id=4]

[node name="Credits" type="Node2D"]
position = Vector2( 320, 180 )
script = ExtResource( 1 )

[node name="LblTitle" type="Label" parent="."]
margin_left = -320.0
margin_top = -165.0
margin_right = 320.0
margin_bottom = -120.0
size_flags_horizontal = 2
size_flags_vertical = 0
theme = ExtResource( 2 )
text = "Credits"
align = 1
valign = 1
uppercase = true

[node name="BtnBack" type="TextureButton" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 272.0
margin_top = -164.0
margin_right = -240.0
margin_bottom = 196.0
size_flags_horizontal = 2
size_flags_vertical = 2
texture_normal = ExtResource( 3 )

[node name="HideScreen" type="Tween" parent="."]

[node name="SamplePlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 639.376, 338.733 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = -298.0
margin_top = -104.0
margin_right = 302.0
margin_bottom = 118.0
size_flags_horizontal = 2
size_flags_vertical = 2
theme = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "[center]
[url=https://games.kloder.com/][img]res://menu/credits/kloder.png[/img][/url]

[color=#FFCA1B]GAME DESIGNER[/color]
[i]Carolina Duque González[/i]

[color=#FFCA1B]DEVELOPER[/color]
[i]Javier López Úbeda[/i]

[color=#FFCA1B]MARKETING[/color]
[i]Carolina Duque González[/i]

[color=#FFCA1B]MUSIC[/color]
[i][url]www.freesound.org[/url]
[url=https://www.freesound.org/people/PhonZz]PhonZz[/url] & [url=https://www.freesound.org/people/alaupas]Alaupas[/url][/i]

[color=#FFCA1B]MADE WITH PROUD WITH[/color]
[url=https://godotengine.org/][img]res://menu/credits/godot.png[/img][/url][/center]"
text = "
KLODER GAMES

GAME DESIGNER
Carolina Duque González

DEVELOPER
Javier López Úbeda

MARKETING
Carolina Duque González

MUSIC
www.freesound.org
PhonZz & Alaupas

MADE WITH PROUD WITH
Godot Engine
"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="BtnBack" to="." method="_on_BtnBack_pressed"]
[connection signal="tween_completed" from="HideScreen" to="." method="_on_HideScreen_tween_completed"]
